--- a/intraflow/develop.ipynb
+++ b/intraflow/develop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,6 +212,8 @@
     "    \n",
     "    cv2.destroyAllWindows()\n",
     "    return selected_center\n",
+    "\n",
+    "\n",
     "\n",
     "def threshold_image(image, threshold_value=128):\n",
     "    \"\"\"Threshold the image to create a binary image.\"\"\"\n",
@@ -350,12 +352,13 @@
     "    \n",
     "    return\n",
     "\n",
-    "    \n"
+    "\n",
+    "   \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,12 +372,12 @@
     "# line_thickness = 5  # Thickness of the line used to label the detected vesicles\n",
     "# detect_vesicles_and_convert_to_polar(file_path, dbscan_output_path, polar_output_path, eps, min_samples, threshold_value, line_thickness)\n",
     "\n",
-    "# test passed"
+    "# # test passed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,15 +481,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# # Example usage\n",
     "# polar_image_path = '../../figs/polar_converted_stack.tif'\n",
     "# overlay_output_path = '../../figs/vesicle_movement_colored.tif'\n",
-    "# process_and_save_overlay(polar_image_path, initial_range=(30, 32), window_size=5, colormap='bwr')\n",
-    "# # test passed\n"
+    "# process_and_save_overlay(polar_image_path, initial_range=(1, 10), window_size=5, colormap='bwr')\n",
+    "# # test passed"
    ]
   },
   {
